--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
+        "@vuepic/vue-datepicker": "^5.3.0",
         "moment": "^2.29.4"
     }
 }
