--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "@vuepic/vue-datepicker": "^5.3.0",
+        "mitt": "^3.0.0",
         "moment": "^2.29.4"
     }
 }
